# RemMux

./: .gitignore  CMakeLists.txt  README.md  main.c
Headers/: client.h  console.h  constants.h
Sources/: client.c  client.h  console.c  console.h  constants.h  server.c  server.h
client/: Child.cpp  Child.h  Client.cpp  Client.h  main.cpp
common/: constants.h  utils.cpp  utils.h
other files/: Documentatie.tex  Process Hierarchy  Shutdown Order
server/: Child.cpp  Child.h  Server.cpp  Server.h  Shell.cpp  Shell.h  ShellTest.cpp  main.cpp
src/: client.cpp  client.h  constants.h  server.cpp  server.h
